plugins {
    id 'java'
    id 'checkstyle'
    id 'io.spring.dependency-management'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
    jvmArgs '--enable-preview'
    useJUnitPlatform()
}

tasks.withType(JavaExec).configureEach {
    jvmArgs '--enable-preview'
}

checkstyle {
    toolVersion = '10.18.1'
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
    ignoreFailures = false
    showViolations = true
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.boot:spring-boot-dependencies:3.4.1'
    }
}

dependencies {
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
